# argentum-online-remake

./: .gitignore  CMakeLists.txt  Makefile  Makefile_client_server  README.md  client  client.Dockerfile  cpplint.py  docker-compose.yml  filter_options  server  server.Dockerfile  start_client.sh  start_server.sh
.circleci/: config.yml
Documentation/: .~lock.Checklist.odt#  COMPILAR CON CMAKE  Checklist.odt  Reunión primera semana  librerias  notas_cmake
client/: CMakeLists.txt  animation.cpp  animation.h  background_map.cpp  background_map.h  blocking_map.cpp  blocking_map.h  blocking_queue.cpp  blocking_queue.h  blockingmap.cpp  blockingmap.h  blockingqueue.cpp  blockingqueue.h  character.cpp  character.h  character_status.cpp  character_status.h  client.cpp  client.h  client_arguments_validator.cpp  client_arguments_validator.h  commands_blocking_queue.cpp  commands_blocking_queue.h  commands_sender.cpp  commands_sender.h  drawable.cpp  drawable.h  dwarf.cpp  dwarf.h  elf.cpp  elf.h  entity_status.cpp  entity_status.h  event.cpp  event.h  event_handler.cpp  event_handler.h  event_sender.cpp  event_sender.h  events_queue.cpp  (+65 more)
cliente/: client.cpp  client.h  client_arguments_validator.cpp  client_arguments_validator.h  client_main.cpp  client_sdl_texture.cpp  client_sdl_texture.h  client_sdl_window.cpp  client_sdl_window.h
common/: arguments_exceptions.cpp  arguments_exceptions.h  arguments_validator.cpp  arguments_validator.h  attack_command_dto.cpp  attack_command_dto.h  bank_gold_command_dto.cpp  bank_gold_command_dto.h  bank_item_command_dto.cpp  bank_item_command_dto.h  buy_item_command_dto.cpp  buy_item_command_dto.h  change_game_room_dto.cpp  change_game_room_dto.h  command_dto.cpp  command_dto.h  common_arguments_exceptions.cpp  common_arguments_exceptions.h  common_arguments_validator.cpp  common_arguments_validator.h  common_connection_exceptions.cpp  common_connection_exceptions.h  common_exception_messages.h  common_sdl_exception.cpp  common_sdl_exception.h  connection_exceptions.cpp  connection_exceptions.h  drop_item_command_dto.cpp  drop_item_command_dto.h  exception_messages.h  get_banked_items_command_dto.cpp  get_banked_items_command_dto.h  heal_command_dto.cpp  heal_command_dto.h  login_command.cpp  login_command_dto.cpp  login_command_dto.h  meditate_command_dto.cpp  meditate_command_dto.h  move_command.cpp  (+23 more)
net/: common_socket.cpp  common_socket.h
protocol/: ClientProtocol.h  ServerProtocol.h  client_ClientProtocol.cpp  client_protocol.cpp  client_protocol.h  protocol.cpp  protocol.h  server_ServerProtocol.cpp  server_protocol.cpp  server_protocol.h
red/: Socket.h  common_Socket.cpp
server/: CMakeLists.txt  argentum_game.cpp  argentum_game.h  banker.cpp  banker.h  base_character.cpp  base_character.h  client_command_receiver.cpp  client_command_receiver.h  client_handler.cpp  client_handler.h  client_listener.cpp  client_listener.h  client_notification_sender.cpp  client_notification_sender.h  command.cpp  command.h  command_blocker.cpp  command_blocker.h  command_factory.cpp  command_factory.h  consumable.cpp  consumable.h  defensive_item.cpp  defensive_item.h  dummy_main.cpp  entity.cpp  entity.h  equipment.h  files_handler.cpp  files_handler.h  fixed_tile.cpp  fixed_tile.h  hero.cpp  hero.h  item.h  main.bkp  main.cpp  main.cpp.tests  map.cpp  (+24 more)
server/cfg/entities/: entities.cfg  entities.json  valgrind.json
server/cfg/map/: mapa.json
server/cfg/maps/: argal_map.json  desert_map.json  grass_map.json  ice_map.json
server/commands/: attack_command.cpp  attack_command.h  bank_gold_command.cpp  bank_gold_command.h  bank_item_command.cpp  bank_item_command.h  buy_item_command.cpp  buy_item_command.h  command.cpp  command.h  drop_item_command.cpp  drop_item_command.h  get_banked_items_command.cpp  get_banked_items_command.h  heal_command.cpp  heal_command.h  login_command.cpp  login_command.h  meditate_command.cpp  meditate_command.h  move_command.cpp  move_command.h  pick_up_drop_command.cpp  pick_up_drop_command.h  private_message_command.cpp  private_message_command.h  quit_command.cpp  quit_command.h  revive_commad.h  revive_command.cpp  sell_item_command.cpp  sell_item_command.h  unbank_gold_command.cpp  unbank_gold_command.h  unbank_item_command.cpp  unbank_item_command.h  use_item_command.cpp  use_item_command.h  use_item_special.command.cpp  use_item_special_command.h
server/exceptions/: model_exceptions.cpp  model_exceptions.h
server/model/: argentum_game.cpp  argentum_game.h  consumable.cpp  deserializer.cpp  deserializer.h  equipment.cpp  hero.h  serializer.cpp  serializer.h  staff.cpp  weapon.cpp  weapon.h
server/model/entities/: banker.cpp  banker.h  base_character.cpp  base_character.h  class_ids.h  entity.cpp  entity.h  hero.cpp  hero.h  heroes_manager.cpp  heroes_manager.h  merchant.cpp  merchant.h  monster.cpp  monster.h  monsters_factory.cpp  monsters_factory.h  monsters_manager.cpp  monsters_manager.h  priest.cpp  priest.h  projectile.cpp  projectile.h  projectiles_manager.cpp  projectiles_manager.h
server/model/items/: consumable.cpp  consumable.h  defensive_item.cpp  defensive_item.h  drop.cpp  drop.h  drops_manager.cpp  drops_manager.h  equipment.cpp  equipment.h  inventory.cpp  inventory.h  item.cpp  item.h  item_factory.cpp  item_factory.h  item_ids.h  staff.cpp  staff.h  weapon.cpp  weapon.h
server/model/map/: map.cpp  map.h  tile.cpp  tile.h
server/notifications/: bank_status_notification.cpp  bank_status_notification.h  close_connection_notification.cpp  close_connection_notification.h  game_status_notification.cpp  game_status_notification.h  map_change_notification.cpp  map_change_notification.h  message_notification.cpp  message_notification.h  notification.cpp  notification.h  sale_info_notification.cpp  sale_info_notification.h  starting_info_notification.cpp  starting_info_notification.h
server/status/: players_file_position  players_status
servidor/: ArgentumGame.h  ClientHandler.h  ClientListener.h  server_ArgentumGame.cpp  server_ClientHandler.cpp  server_ClientListener.cpp  (+3 more)
(+15 files in other folders)
